# tp-iibdcc-ai-agentic-evaluation

./: README.md  download_docs.py  generate_graph.py  graph.mmd  ingest.py  main.py  pyproject.toml
evaluation/: questions.py  run_evaluation.py
src/: config.py  graph.py  llm.py  state.py  tools.py  vectorstore.py
tests/: test_tools.py
